# Neural-nets

./: .gitignore  LICENSE  README.md  Stock Market Prediction-checkpoint.ipynb  attempting.ipynb  cnn_stock_predictor.ipynb  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.ipynb_checkpoints/: Stock Market Prediction-checkpoint-checkpoint.ipynb  Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb
benchmarks/: bench_memory.py  bench_search.py
experiments/: crisis_2008.py  crisis_2008_v2.py  crisis_2008_v3.py  cross_asset_vol.py  cross_crypto_vol.py  crypto_eth_v3.py  ensemble_intraday_rv.py  evolve_and_predict_eth.py  evolve_eth_btc_5day.py  evolve_returns_extended.py  evolve_returns_v5.py  lightgbm_intraday_rv.py  multi_ticker_v4.py  permutation_test_lightgbm.py  walk_forward_eth.py  walk_forward_intraday_har.py  walk_forward_intraday_rv.py  walk_forward_stocks.py  walk_forward_vol_eth.py  walk_forward_vol_stocks.py
experiments/results/: cross_asset_vol.json
scripts/: fetch_binance.py  fetch_binance_intraday.py  predict.py  predict_vol.py  predict_vol_dashboard.py  predict_vol_lightgbm.py  predict_vol_quantile.py  train_and_save.py
scripts/results/: predict_vol_dashboard.json  predict_vol_lightgbm.json
src/: __init__.py  _cache.py  configs.py  data.py  evaluation.py  evolution.py  features.py  hyperparam_search.py  metrics.py  models.py  plotting.py  training.py
src/data/: __init__.py  loaders.py  splits.py
src/schemas/: __init__.py  configs.py  metrics.py  results.py  splits.py
src/search/: __init__.py  evolution.py  hyperparam.py
tests/: conftest.py  test_evolution.py  test_features.py  test_metrics.py
