[project]
name = "cnn-stock-predictor"
version = "0.1.0"
description = "CNN next-day close predictor for US equities — methodology + experiments around the 2008 crisis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Darius Grigore Pop" }]
requires-python = ">=3.11,<3.13"
keywords = ["cnn", "stocks", "time-series", "evolution-strategy", "backtest"]

# Versions are pinned to what the experiments were last run against.
# Loosen with care: tensorflow 2.14 in particular is paired with specific
# protobuf/keras shims that newer combos break on Windows.
dependencies = [
    "numpy==1.26.0",
    "pandas==2.1.1",
    "scikit-learn==1.3.2",
    "tensorflow==2.14.0",
    "keras==2.14.0",
    "pydantic==2.12.4",
    "matplotlib==3.8.0",
    "seaborn==0.13.0",
    "yfinance==0.2.33",
    "psutil==5.9.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
]

[project.urls]
Repository = "https://github.com/darius225/Neural-nets"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# uv-specific (https://docs.astral.sh/uv/)
[tool.uv]
dev-dependencies = ["pytest==9.0.1"]

# pytest config — keeps test discovery deterministic.
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
