[project]
name = "cnn-stock-predictor"
version = "0.1.0"
description = "CNN next-day close predictor for US equities — methodology + experiments around the 2008 crisis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Darius Grigore Pop" }]
requires-python = ">=3.11,<3.13"
keywords = ["cnn", "stocks", "time-series", "evolution-strategy", "backtest"]

# Versions are pinned to what the experiments were last run against.
# Loosen with care: tensorflow 2.14 in particular is paired with specific
# protobuf/keras shims that newer combos break on Windows.
dependencies = [
    "numpy==1.26.0",
    "pandas==2.1.1",
    "scikit-learn==1.3.2",
    "tensorflow==2.14.0",
    "keras==2.14.0",
    "pydantic==2.12.4",
    "matplotlib==3.8.0",
    "seaborn==0.13.0",
    "yfinance==0.2.33",
    "psutil==5.9.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
]

[project.urls]
Repository = "https://github.com/darius225/Neural-nets"

[dependency-groups]
dev = ["pytest==9.0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# pytest config — keeps test discovery deterministic.
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

# ruff — linter + formatter (replaces black + isort + flake8 + pyupgrade).
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb"]   # notebooks have their own conventions

[tool.ruff.lint]
# E + W: pycodestyle errors / warnings
# F:     pyflakes  (unused imports / undefined names)
# I:     isort     (import ordering)
# B:     flake8-bugbear (likely bugs)
# UP:    pyupgrade (modern syntax)
# SIM:   flake8-simplify
# RUF:   ruff-native rules
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
# E501 (line too long): handled by the formatter.
# B008 (function call in default): trips on Pydantic Field(...) which is legitimate.
# RUF001/RUF002: en-dashes and multiplication signs in docstrings are intentional
# typography (e.g. "10 tickers × 6 years"), not source-code typos.
ignore = ["E501", "B008", "RUF001", "RUF002"]

[tool.ruff.lint.per-file-ignores]
"__init__.py"            = ["F401"]   # re-exports
"src/**/__init__.py"     = ["F401"]   # ditto
"tests/**"               = ["B011"]   # assert-like patterns OK in tests
"experiments/**"         = ["E402"]   # sys.path tweak before imports is intentional
"scripts/**"             = ["E402"]   # same
"benchmarks/**"          = ["E402"]   # same

[tool.ruff.lint.isort]
known-first-party = ["src"]
